# upDawg

./: .env.example  .gitignore  README.md  cargo.toml  docker-compose.yml
.cargo/: config.toml
client/: index.html  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/signin/: page.tsx
client/src/app/signup/: page.tsx
client/src/components/: AddSiteForm.tsx  DogLogo.tsx  Footer.tsx  GlobeCanvas.tsx  HeroCanvas.tsx  Navbar.tsx  ProfileModal.tsx  SiteList.tsx  StepCanvas.tsx  ThemeToggle.tsx  TowerCanvas.tsx
client/src/hooks/: useSites.ts
client/src/lib/: api.ts  monitor.ts
client/src/provider/: ReduxProvider.tsx
client/src/store/: WebsiteSlice.ts  authSlice.ts  siteSlice.ts  siteStore.ts  store.ts  websiteSlice.ts
client/src/types/: site.ts
db/: .env.example  .gitignore  Cargo.toml
db/migrations/2026-02-04-062748-0000_create_user/: down.sql  up.sql
db/migrations/2026-02-07-184133-0000_add_unique_user/: up.sql
db/migrations/2026-03-08-152756-0000_init/: down.sql  up.sql
db/migrations/2026-03-08-155136-0000_enum/: down.sql  up.sql
db/migrations/2026-03-10-054410-0000_create_website_tick/: up.sql
db/migrations/2026-03-10-200000-0000_add_alert_email/: down.sql  up.sql
db/src/: config.rs  lib.rs  pool.rs  schema.rs  store.rs
db/src/models/: mod.rs  user.rs  website.rs  website_status.rs  website_tick.rs
db/src/queries/: mod.rs  tick_queries.rs  user_queries.rs  website_queries.rs
http/: ..env.un~  Cargo.toml
http/src/: main.rs  req_input.rs  req_output.rs
http/src/middleware/: authmiddleware.rs
http/src/routes/: user.rs  website.rs
http/src/services/: mod.rs  user_service.rs  website_service.rs
http/src/types/: request.rs  response.rs
http/src/utils/: jwt.rs
updawg-http/: Cargo.toml
updawg-http/src/error/: http_errors.rs
updawg-http/src/middleware/: authmiddleware.rs
updawg-http/src/routes/: website.rs
updawg-http/src/types/: request.rs
worker/: Cargo.toml
worker/src/: alerts.rs  config.rs  main.rs  monitor.rs  scheduler.rs
