[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.6", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }

chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"