[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
poem   = {version="3.1.12"}
serde  = {version ="1.0.228", features=["derive"]}
db     = {path="../db"}
diesel = { version = "2.3.6", features = ["postgres"] }
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = "0.15.7"
jsonwebtokens = "1.2.0"
