[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
diesel = { version = "2.3.6", features = ["postgres"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
db = { path = "../db" }